--- a/empresa/portal.html
+++ b/empresa/portal.html
@@ -224,11 +224,24 @@
                         <i class="fa-solid fa-sliders"></i> Panel de Control
                     </h2>
                     <div class="flex gap-4 mt-4 flex-wrap">
-                        <!-- Euro Rate -->
-                        <div class="bg-blue-50 p-3 rounded-lg border border-blue-100">
-                            <label class="block text-xs font-bold text-blue-700 mb-1">Tasa Euro BCV (Bs.)</label>
-                            <input type="number" id="euro-rate" value="55.00" step="0.01" onchange="updateRate()"
-                                class="w-24 p-1 text-right font-mono font-bold border rounded focus:ring-2 focus:ring-blue-400 outline-none">
+                        <!-- Euro Rate with Auto-Update -->
+                        <div class="bg-blue-50 p-3 rounded-lg border border-blue-100 relative">
+                            <label class="block text-xs font-bold text-blue-700 mb-1 flex items-center justify-between">
+                                <span>Tasa Euro BCV (Bs.)</span>
+                                <button onclick="fetchEuroRate()" id="refresh-euro-btn"
+                                    class="ml-2 text-blue-600 hover:text-blue-800 transition"
+                                    title="Actualizar desde BCV">
+                                    <i class="fa-solid fa-sync text-xs"></i>
+                                </button>
+                            </label>
+                            <div class="flex items-center gap-2">
+                                <input type="number" id="euro-rate" value="55.00" step="0.01" onchange="updateRate()"
+                                    class="w-24 p-1 text-right font-mono font-bold border rounded focus:ring-2 focus:ring-blue-400 outline-none">
+                                <span id="euro-status" class="text-[9px] text-gray-400">Manual</span>
+                            </div>
+                            <div id="euro-last-update" class="text-[9px] text-gray-500 mt-1 hidden">
+                                <!-- Última actualización se mostrará aquí -->
+                            </div>
                         </div>
 
                         <!-- Bulk Update -->
@@ -433,6 +446,13 @@
 
             renderTable();
             document.getElementById('print-date').textContent = new Date().toLocaleDateString();
+
+            // Obtener tasa del euro automáticamente al cargar
+            // Se intenta actualizar desde la API del BCV
+            fetchEuroRate().catch(err => {
+                console.log('No se pudo actualizar automáticamente la tasa del euro:', err);
+                // Si falla, se usa el valor guardado o el valor por defecto
+            });
         }
 
         function initDefaults(product) {
@@ -452,6 +472,86 @@
                 renderTable(); // Re-render to update Bs prices
             }
         }
+
+        /**
+         * Obtiene la tasa del euro automáticamente desde la API del BCV
+         */
+        async function fetchEuroRate() {
+            const btn = document.getElementById('refresh-euro-btn');
+            const statusSpan = document.getElementById('euro-status');
+            const lastUpdateDiv = document.getElementById('euro-last-update');
+            const input = document.getElementById('euro-rate');
+
+            // Indicador de carga
+            btn.innerHTML = '<i class="fa-solid fa-spinner fa-spin text-xs"></i>';
+            btn.disabled = true;
+            statusSpan.textContent = 'Consultando...';
+            statusSpan.className = 'text-[9px] text-blue-600 font-bold animate-pulse';
+
+            try {
+                // Intentar API de DolarVZLA (Monitor BCV)
+                const response = await fetch('https://api.dolarvzla.com/v2/exchange');
+
+                if (!response.ok) {
+                    throw new Error('Error en la respuesta de la API');
+                }
+
+                const data = await response.json();
+
+                // Buscar la tasa del EUR BCV
+                let eurRate = null;
+
+                // DolarVZLA devuelve un objeto con diferentes tasas
+                // Buscar EUR en la respuesta
+                if (data && data.bcv && data.bcv.eur) {
+                    eurRate = data.bcv.eur;
+                } else if (data && data.EUR) {
+                    eurRate = data.EUR;
+                }
+
+                if (eurRate && eurRate > 0) {
+                    // Actualizar el input
+                    input.value = eurRate.toFixed(2);
+                    euroRate = eurRate;
+
+                    // Guardar en localStorage
+                    localStorage.setItem('ultraSecoEuroRate', euroRate);
+
+                    // Actualizar UI
+                    statusSpan.textContent = 'BCV ✓';
+                    statusSpan.className = 'text-[9px] text-green-600 font-bold';
+
+                    // Mostrar última actualización
+                    const now = new Date();
+                    const timeStr = now.toLocaleTimeString('es-VE', { hour: '2-digit', minute: '2-digit' });
+                    lastUpdateDiv.textContent = `Actualizado: ${timeStr}`;
+                    lastUpdateDiv.classList.remove('hidden');
+
+                    // Re-renderizar tabla con nuevos precios en Bs
+                    renderTable();
+
+                    console.log('✅ Tasa del euro actualizada desde BCV:', eurRate);
+                } else {
+                    throw new Error('No se encontró la tasa del EUR en la respuesta');
+                }
+
+            } catch (error) {
+                console.error('❌ Error al obtener tasa del euro:', error);
+
+                statusSpan.textContent = 'Error';
+                statusSpan.className = 'text-[9px] text-red-600 font-bold';
+
+                lastUpdateDiv.textContent = 'No se pudo conectar con el BCV';
+                lastUpdateDiv.classList.remove('hidden');
+
+                alert('No se pudo obtener la tasa del BCV. Puedes ingresar el valor manualmente.');
+            } finally {
+                // Restaurar botón
+                btn.innerHTML = '<i class="fa-solid fa-sync text-xs"></i>';
+                btn.disabled = false;
+            }
+        }
+
 
         // --- HISTORY / UNDO ---
         function pushHistory() {
@@ -668,6 +768,12 @@
 
         // --- ACTIONS ---
         function saveChanges() {
+            // Asegurarse de capturar el valor actual del euroRate desde el input
+            const currentEuroRate = parseFloat(document.getElementById('euro-rate').value);
+            if (!isNaN(currentEuroRate) && currentEuroRate > 0) {
+                euroRate = currentEuroRate;
+            }
+
             // Save structure: { 'prodId': [ {price: 10, cost: 5, ...}, ... ] }
             const priceMap = {};
             localProducts.forEach(p => {
